# doc/api.yaml
@@ -661,8 +661,8 @@ components:
         status:
           description: status of the message
           type: string
-          enum: [seen, sent, sending, deleted]
-          pattern: '^(seen|sent|sending|deleted)$'
+          enum: [seen, sent, sending, deleted,delivered]
+          pattern: '^(seen|sent|sending|deleted|delivered)$'
           minLength: 4
           maxLength: 7
         text:
@@ -749,6 +749,8 @@ components:
             $ref: "#/components/schemas/Message"
           minItems: 0
           maxItems: 1000
+        lastMessage:
+          $ref: '#/components/schemas/Message'
 
     Group:
       allOf:
@@ -777,6 +779,13 @@ components:
                 $ref: '#/components/schemas/UserId'
               minItems: 2     
               maxItems: 100
+            createdAt:
+              type: string
+              format: date-time
+              pattern: '^\d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}Z$'
+              minLength: 20
+              maxLength: 20
+              description: Group creation date
           required:
             - participants  
 
